--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,16 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
-			<version>4.0.2-SNAPSHOT</version>
+			<version>4.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>spim_data</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>bigdataviewer-vistools</artifactId>
+			<version>1.0.0-beta-7-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Mastodon deps -->
