--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,6 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
-			<version>4.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
@@ -61,6 +60,17 @@
 			<groupId>org.mastodon</groupId>
 			<artifactId>mastodon-collection</artifactId>
 			<version>1.0.0-beta-4-SNAPSHOT</version>
+		</dependency>
+		
+		<!-- JFreeChart deps -->
+		
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jcommon</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
 		</dependency>
 		
 		<!-- ImgLib2 deps -->
