--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.mastodon</groupId>
 			<artifactId>mastodon-collection</artifactId>
-			<version>1.0.0-beta-4-SNAPSHOT</version>
+			<version>1.0.0-beta-6-SNAPSHOT</version>
 		</dependency>
 		
 		<!-- JFreeChart deps -->
@@ -113,7 +113,12 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.mastodon</groupId>
+			<artifactId>mastodon-graph</artifactId>
+			<version>1.0.0-beta-4-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<mailingLists>
