--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 
 		<dependency>
 			<groupId>net.imglib2</groupId>
+			<artifactId>imglib2-roi</artifactId>
+			<version>0.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2-algorithm-fft</artifactId>
 		</dependency>
 
