--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-		http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -14,7 +11,7 @@
 
 	<groupId>net.trndy</groupId>
 	<artifactId>mastodon-tracking</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 
 	<name>Mastodon tracking</name>
 	<description>Basic tracking algorithms based on Mastodon data structures.</description>
@@ -114,7 +111,7 @@
 	<scm>
 		<connection>scm:git:git:github.com/TrNdy/mastodon-tracking</connection>
 		<developerConnection>scm:git:git@github.com:TrNdy/mastodon-tracking</developerConnection>
-		<tag>HEAD</tag>
+		<tag>mastodon-tracking-0.1.0</tag>
 		<url>https://github.com/TrNdy/mastodon-tracking</url>
 	</scm>
 	<issueManagement>
