--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>19.2.0</version>
+		<version>20.0.0</version>
 		<relativePath />
 	</parent>
 
@@ -35,7 +35,6 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
-			<version>4.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
@@ -51,7 +50,7 @@
 		<dependency>
 			<groupId>net.trackmate</groupId>
 			<artifactId>trackmate</artifactId>
-			<version>1.0.0-beta-4</version>
+			<version>1.0.0-beta-5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mastodon</groupId>
@@ -125,7 +124,7 @@
 
 	<properties>
 		<package-name>org.trndy</package-name>
-		<!-- <enforcer.skip>true</enforcer.skip> -->
+		<enforcer.skip>true</enforcer.skip>
 		<license.licenseName>not licensed yet</license.licenseName>
 		<license.projectName>mastodon-tracking</license.projectName>
 		<license.organizationName>Mastodon authors</license.organizationName>
@@ -169,13 +168,4 @@
 			<url>http://maven.imagej.net/content/groups/public</url>
 		</repository>
 	</repositories>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.scijava</groupId>
-				<artifactId>ui-behaviour</artifactId>
-				<version>1.7.0</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 </project>
