--- a/pom.xml
+++ b/pom.xml
@@ -55,12 +55,12 @@
 		<dependency>
 			<groupId>org.mastodon</groupId>
 			<artifactId>mastodon-collection</artifactId>
-			<version>1.0.0-beta-14</version>
+			<version>1.0.0-beta-15-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mastodon</groupId>
 			<artifactId>mastodon-graph</artifactId>
-			<version>1.0.0-beta-11</version>
+			<version>1.0.0-beta-12-SNAPSHOT</version>
 		</dependency>
 
 		<!-- JFreeChart deps -->
