Add scijava-ui-swing as a dependency.
To get access to the LoggingPanel facilities.

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,10 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.scijava</groupId>
+			<artifactId>scijava-ui-swing</artifactId>
+		</dependency>
 	</dependencies>
 
 	<mailingLists>
