--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>20.0.0</version>
+		<version>21.0.0</version>
 		<relativePath />
 	</parent>
 
@@ -35,6 +35,7 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
+			<version>5.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
@@ -50,7 +51,7 @@
 		<dependency>
 			<groupId>net.trackmate</groupId>
 			<artifactId>trackmate</artifactId>
-			<version>1.0.0-beta-5</version>
+			<version>1.0.0-beta-6-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mastodon</groupId>
@@ -89,6 +90,11 @@
 		<dependency>
 			<groupId>org.scijava</groupId>
 			<artifactId>scijava-plugins-commands</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.scijava</groupId>
+			<artifactId>ui-behaviour</artifactId>
+			<version>1.7.4-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Test dependencies -->
