--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>21.0.0</version>
+		<version>23.2.0</version>
 		<relativePath />
 	</parent>
 
@@ -35,7 +35,6 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
-			<version>5.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
@@ -51,7 +50,7 @@
 		<dependency>
 			<groupId>net.trackmate</groupId>
 			<artifactId>trackmate</artifactId>
-			<version>1.0.0-beta-6</version>
+			<version>1.0.0-beta-7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mastodon</groupId>
@@ -61,7 +60,7 @@
 		<dependency>
 			<groupId>org.mastodon</groupId>
 			<artifactId>mastodon-graph</artifactId>
-			<version>1.0.0-beta-11</version>
+			<version>1.0.0-beta-14-SNAPSHOT</version>
 		</dependency>
 
 		<!-- JFreeChart deps -->
