--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
+			<version>5.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
@@ -50,7 +51,7 @@
 		<dependency>
 			<groupId>net.trackmate</groupId>
 			<artifactId>trackmate</artifactId>
-			<version>1.0.0-beta-10-SNAPSHOT</version>
+			<version>1.0.0-beta-10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mastodon</groupId>
@@ -96,7 +97,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.scijava</groupId>
+			<artifactId>scijava-ui-swing</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.scijava</groupId>
 			<artifactId>ui-behaviour</artifactId>
+			<version>1.7.4</version>
 		</dependency>
 
 		<!-- Test dependencies -->
@@ -104,11 +110,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.scijava</groupId>
-			<artifactId>scijava-ui-swing</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -136,7 +137,7 @@
 
 	<properties>
 		<package-name>org.trndy</package-name>
-		<enforcer.skip>true</enforcer.skip>
+		<!-- <enforcer.skip>true</enforcer.skip> -->
 		<license.licenseName>not licensed yet</license.licenseName>
 		<license.projectName>mastodon-tracking</license.projectName>
 		<license.organizationName>Mastodon authors</license.organizationName>
