--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.23</version>
+		</dependency>
+
 		<!-- BDV deps -->
 
 		<dependency>
@@ -98,11 +104,6 @@
 		<dependency>
 			<groupId>org.scijava</groupId>
 			<artifactId>scijava-ui-swing</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.scijava</groupId>
-			<artifactId>ui-behaviour</artifactId>
-			<version>1.7.4</version>
 		</dependency>
 
 		<!-- Test dependencies -->
