--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>24.2.0</version>
+		<version>27.0.1</version>
 		<relativePath />
 	</parent>
 
@@ -149,8 +149,8 @@
 		<bigdataviewer-core.version>6.0.1</bigdataviewer-core.version>
 		<bigdataviewer-vistools.version>1.0.0-beta-13</bigdataviewer-vistools.version>
 
-		<!-- NB: Deploy releases to the ImageJ Maven repository. -->
-		<releaseProfiles>deploy-to-imagej</releaseProfiles>
+		<!-- NB: Deploy releases to the SciJava Maven repository. -->
+		<releaseProfiles>deploy-to-scijava</releaseProfiles>
 	</properties>
 
 	<developers>
@@ -183,8 +183,8 @@
 
 	<repositories>
 		<repository>
-			<id>imagej.public</id>
-			<url>http://maven.imagej.net/content/groups/public</url>
+			<id>scijava.public</id>
+			<url>http://maven.scijava.org/content/groups/public</url>
 		</repository>
 	</repositories>
 </project>
