--- a/pom.xml
+++ b/pom.xml
@@ -56,17 +56,7 @@
 		<dependency>
 			<groupId>org.mastodon</groupId>
 			<artifactId>mastodon</artifactId>
-			<version>1.0.0-beta-14</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mastodon</groupId>
-			<artifactId>mastodon-collection</artifactId>
-			<version>1.0.0-beta-17</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mastodon</groupId>
-			<artifactId>mastodon-graph</artifactId>
-			<version>1.0.0-beta-16</version>
+			<version>1.0.0-beta-15</version>
 		</dependency>
 
 		<!-- JFreeChart deps -->
@@ -141,16 +131,14 @@
 
 	<properties>
 		<package-name>org.mastodon</package-name>
-		<!-- <enforcer.skip>true</enforcer.skip> -->
 		<license.licenseName>not licensed yet</license.licenseName>
 		<license.projectName>mastodon-tracking</license.projectName>
 		<license.organizationName>Mastodon authors</license.organizationName>
 		<license.copyrightOwners>Tobias Pietzsch, Jean-Yves Tinevez</license.copyrightOwners>
-
-		<bigdataviewer-core.version>6.0.1</bigdataviewer-core.version>
-		<bigdataviewer-vistools.version>1.0.0-beta-13</bigdataviewer-vistools.version>
-
-		<!-- NB: Deploy releases to the SciJava Maven repository. -->
+		<bigdataviewer-core.version>9.0.1</bigdataviewer-core.version>
+		<bigdataviewer-vistools.version>1.0.0-beta-20</bigdataviewer-vistools.version>
+		<spim_data.version>2.2.4</spim_data.version>
+		<ui-behaviour.version>2.0.1</ui-behaviour.version>
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
 	</properties>
 
