--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,6 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
-			
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
@@ -131,14 +130,20 @@
 
 	<properties>
 		<package-name>org.mastodon</package-name>
+
+		<!-- <enforcer.skip>true</enforcer.skip> -->
+
 		<license.licenseName>not licensed yet</license.licenseName>
 		<license.projectName>mastodon-tracking</license.projectName>
 		<license.organizationName>Mastodon authors</license.organizationName>
 		<license.copyrightOwners>Tobias Pietzsch, Jean-Yves Tinevez</license.copyrightOwners>
+
 		<bigdataviewer-core.version>9.0.1</bigdataviewer-core.version>
 		<bigdataviewer-vistools.version>1.0.0-beta-20</bigdataviewer-vistools.version>
 		<spim_data.version>2.2.4</spim_data.version>
 		<ui-behaviour.version>2.0.1</ui-behaviour.version>
+
+		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
 	</properties>
 
