fix maven.scijava.org URL

--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
 	<repositories>
 		<repository>
 			<id>scijava.public</id>
-			<url>http://maven.scijava.org/content/groups/public</url>
+			<url>https://maven.scijava.org/content/groups/public</url>
 		</repository>
 	</repositories>
 </project>
