--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.mastodon</groupId>
 	<artifactId>mastodon-tracking</artifactId>
-	<version>1.0.0-beta-6-SNAPSHOT</version>
+	<version>1.0.0-beta-6</version>
 
 	<name>Mastodon tracking</name>
 	<description>Basic tracking algorithms based on Mastodon data structures.</description>
@@ -116,7 +116,7 @@
 	<scm>
 		<connection>scm:git:git:github.com/mastodon-sc/mastodon-tracking</connection>
 		<developerConnection>scm:git:git@github.com:mastodon-sc/mastodon-tracking</developerConnection>
-		<tag>HEAD</tag>
+		<tag>mastodon-tracking-1.0.0-beta-6</tag>
 		<url>https://github.com/mastodon-sc/mastodon-tracking</url>
 	</scm>
 	<issueManagement>
