--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>org.mastodon</groupId>
 			<artifactId>mastodon</artifactId>
-			<version>1.0.0-beta-16</version>
+			<version>1.0.0-beta-17-SNAPSHOT</version>
 		</dependency>
 
 		<!-- JFreeChart deps -->
