--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.scijava</groupId>
-		<artifactId>pom-scijava</artifactId>
-		<version>29.2.1</version>
-		<relativePath />
+		<groupId>org.mastodon</groupId>
+		<artifactId>pom-mastodon</artifactId>
+		<version>1.0.0-beta-1-SNAPSHOT</version>
 	</parent>
 
-	<groupId>org.mastodon</groupId>
 	<artifactId>mastodon-tracking</artifactId>
 	<version>1.0.0-beta-7-SNAPSHOT</version>
 
-	<name>Mastodon tracking</name>
+	<name>Mastodon Tracking</name>
 	<description>Basic tracking algorithms based on Mastodon data structures.</description>
 	<url>https://github.com/mastodon-sc/mastodon-tracking</url>
 	<inceptionYear>2017</inceptionYear>
@@ -53,9 +51,8 @@
 		<!-- Mastodon deps -->
 
 		<dependency>
-			<groupId>org.mastodon</groupId>
+			<groupId>${mastodon.group}</groupId>
 			<artifactId>mastodon</artifactId>
-			<version>1.0.0-beta-17-SNAPSHOT</version>
 		</dependency>
 
 		<!-- JFreeChart deps -->
