--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,20 @@
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
 	</properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 	<profiles>
 		<profile>
 			<!-- Target JDK1.8 for build. -->
