--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>29.2.1</version>
+		<version>30.0.0</version>
 	</parent>
 
 	<artifactId>mastodon-tracking</artifactId>
@@ -134,7 +134,9 @@
 		<license.organizationName>Mastodon authors</license.organizationName>
 		<license.copyrightOwners>Tobias Pietzsch, Jean-Yves Tinevez</license.copyrightOwners>
 		
-		<mastodon.version>1.0.0-beta-17-SNAPSHOT</mastodon.version>
+		<mastodon.version>1.0.0-beta-18-SNAPSHOT</mastodon.version>
+		<bigdataviewer-core.version>10.2.0</bigdataviewer-core.version>
+		
 		
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
