--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<version>30.0.0</version>
 	</parent>
 
+	<groupId>org.mastodon</groupId>
 	<artifactId>mastodon-tracking</artifactId>
 	<version>1.0.0-beta-8-SNAPSHOT</version>
 
