--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
 		<license.organizationName>Mastodon authors</license.organizationName>
 		<license.copyrightOwners>Tobias Pietzsch, Jean-Yves Tinevez</license.copyrightOwners>
 		
-		<mastodon.version>1.0.0-beta-18-SNAPSHOT</mastodon.version>
+		<mastodon.version>1.0.0-beta-18</mastodon.version>
 		<bigdataviewer-core.version>10.2.0</bigdataviewer-core.version>
 		
 		
