CI: switch from Travis CI to GitHub Actions

--- a/pom.xml
+++ b/pom.xml
@@ -123,8 +123,8 @@
 		<url>https://github.com/mastodon-sc/mastodon-tracking/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Travis CI</system>
-		<url>https://travis-ci.com/mastodon-sc/mastodon-tracking</url>
+		<system>GitHub Actions</system>
+		<url>https://github.com/mastodon-sc/mastodon-tracking/actions</url>
 	</ciManagement>
 
 	<properties>
@@ -140,7 +140,7 @@
 		
 		
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
-		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
 
 	<developers>
