--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
 	</mailingLists>
 
 	<scm>
-		<connection>scm:git:git:github.com/mastodon-sc/mastodon-tracking</connection>
+		<connection>scm:git:https:github.com/mastodon-sc/mastodon-tracking</connection>
 		<developerConnection>scm:git:git@github.com:mastodon-sc/mastodon-tracking</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/mastodon-sc/mastodon-tracking</url>
