--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.mastodon</groupId>
 	<artifactId>mastodon-tracking</artifactId>
-	<version>1.0.0-beta-13-SNAPSHOT</version>
+	<version>1.0.0-beta-13</version>
 
 	<name>Mastodon Tracking</name>
 	<description>Basic tracking algorithms based on Mastodon data structures.</description>
@@ -115,7 +115,7 @@
 	<scm>
 		<connection>scm:git:https:github.com/mastodon-sc/mastodon-tracking</connection>
 		<developerConnection>scm:git:git@github.com:mastodon-sc/mastodon-tracking</developerConnection>
-		<tag>HEAD</tag>
+		<tag>mastodon-tracking-1.0.0-beta-13</tag>
 		<url>https://github.com/mastodon-sc/mastodon-tracking</url>
 	</scm>
 	<issueManagement>
